--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,67 @@
 body {
     font-family: "DM Sans", sans-serif;
 }
+
+header div{
+    background-image:img();
+}
+
+header nav img{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+header nav ol{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+header div1 h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header div1 p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header div1 p1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main section{
+    display: flex;
+}
+
+.boton-azul{
+    background-color: blue;
+}
+
+main section article1{
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+main section article2{
+    background-color: blue;
+    border: 1px solid purple;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+main section article3{
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-end;
+}
